changed a few files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: arindam
   {% endfor %}
 </p>
 <div style="display:inline-block;vertical-align:top">
-    <a href="https://twitter.com/share" class="twitter-share-button" data-via="adamralph" data-related="adamralph" data-count="none" data-text="{{ post.title }}" data-url="http://{{ site.host }}{{ post.url | remove:'.html' }}">Tweet</a>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-via="rrindam" data-related="rrindam" data-count="none" data-text="{{ post.title }}" data-url="http://{{ site.host }}{{ post.url | remove:'.html' }}">Tweet</a>
 </div>
 <div style="display:inline-block;vertical-align:top">
     <a data-pocket-label="pocket" data-pocket-count="none" class="pocket-btn" data-lang="en" data-save-url="http://{{ site.host }}{{ post.url | remove:'.html' }}"></a>
