--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@ layout: default
 title: Arindam Pradhan
 ---
 <h1>Arindam Pradhan</h1>
-<p> Hi ,I am Arindam Pradhan 20,I live in a small city Bhubaneswar in Orissa.I am an electrical engineer graduate at <a href="http://cet.edu.in/">CET,Bhubaneswar</a>.</p>
-<p>I have a keen intrest on FOOS and web development.I enjoy programming ,it's fun for me and gives me happiness.Have a look at my <a href="https://github.com/arindampradhan"></a>github ,these are some of my works and contributions .</p>
+<p> Hi ,I am Arindam Pradhan 20,I live in a small town Bhubaneswar in Orissa.I am an electrical engineer graduate at <a href="http://cet.edu.in/">CET,Bhubaneswar</a>.</p>
+<p>I have a keen intrest on FOOS and Competitive Programming.I enjoy programming ,it's fun activity, keeps me focused and calm.Have a look at my <a href="https://github.com/arindampradhan"></a>github ,these are some of my works and contributions .</p>
 
-<p>strategy games like age of empiresa <a href="http://www.ageofempires3.com/">Age Of Empiresa</a> and RPG games like <a href="http://www.devilmaycry.com/">Devil May Cry</a>are my favourite.I am a foodie...and a little inclined towars my coffee.</p>
+<p>Strategy games like Age Of Empires <a href="http://www.ageofempires3.com/">Age Of Empiresa</a> and RPG games like <a href="http://assassinscreed.ubi.com/en-gb/home/">Assasin's Creed</a>are my favourite.I am a foodie...and a little inclined towars my coffee.</p>
 
-<p>You can always contact me on  <a href="twitter.com/rrindam">twitter</a>and ircs if you are intrested in doing projects. </p>
+<p>Intrested in doing projects, you can always contact me on  <a href="twitter.com/rrindam">twitter</a>and  <a href="https://plus.google.com/114591183859331432646">google+.</a> </p>
