--- a/feed/index.html
+++ b/feed/index.html
@@ -17,7 +17,7 @@
         <link href="http://www.arindam.com{{ post.url }}/"/>
         <updated>{{ post.date | date_to_xmlschema }}</updated>
         <id>http://blog.arindam.com{{ post.id }}/</id>
-        <content type="html">{{ post.content | xml_escape }}{% include rss_footer.html %}</content>
+        <<summary type="html">{{ post.content | xml_escape }}</summary>
     </entry>
     {% endfor %}
 </feed>
