--- a/feed/index.html
+++ b/feed/index.html
@@ -2,11 +2,11 @@
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
-    <title type="text" xml:lang="en">arindam.com</title>
-    <link type="application/atom+xml" href="http://www.arindam.com/feed/" rel="self"/>
-    <link type="text/html" href="http://www.arindam.com" rel="alternate"/>
+    <title type="text" xml:lang="en">arindam2u.com</title>
+    <link type="application/atom+xml" href="http://www.arindam2u.com/feed/" rel="self"/>
+    <link type="text/html" href="http://www.arindam2u.com" rel="alternate"/>
     <updated>{{ site.time | date_to_xmlschema }}</updated>
-    <id>http://www.arindam.com/</id>
+    <id>http://www.arindam2u.com/</id>
     <author>
         <name>Arindam Pradhan</name>
     </author>
@@ -14,9 +14,9 @@
     {% for post in site.posts limit:20 %}
     <entry>
         <title>{{ post.title }}</title>
-        <link href="http://www.arindam.com{{ post.url }}/"/>
+        <link href="http://www.arindam2u.com{{ post.url }}/"/>
         <updated>{{ post.date | date_to_xmlschema }}</updated>
-        <id>http://blog.arindam.com{{ post.id }}/</id>
+        <id>http://blog.arindam2u.com{{ post.id }}/</id>
         <<summary type="html">{{ post.content | xml_escape }}</summary>
     </entry>
     {% endfor %}
