changed a few files

--- a/about.html
+++ b/about.html
@@ -2,10 +2,10 @@
 layout: default
 title: Arindam Pradhan
 ---
-<h1>Arindam Pradhan</h1>
-<p> Hi ,I am Arindam Pradhan 20,I live in a small town Bhubaneswar in Orissa.I am an electrical engineer graduate at <a href="http://cet.edu.in/">CET,Bhubaneswar</a>.</p>
-<p>I have a keen intrest on FOOS and Competitive Programming.I enjoy programming ,it's fun activity, keeps me focused and calm.Have a look at my <a href="https://github.com/arindampradhan">github</a> ,these are some of my works and contributions .</p>
+<h1>Arindam Pradhan</h1>	
+<p> Hey Hi ,I am Arindam Pradhan 20,I live in a small town Bhubaneswar in Orissa.I am an electrical engineer graduate at <a href="http://cet.edu.in/">CET,Bhubaneswar</a>.</p>
+<p>I have a keen intrest on FOOS and Competitive Programming.I enjoy programming ,it's fun activity, keeps me focused and calm.Have a look at my <a href="https://github.com/arindampradhan">github</a> ,these are some of my works.Currenty I am self teaching,I follow mostly blogs,tutorials and github projects.I get motivated a lot and my dream is to be the best programmer,master a single language and write lots(tons) of code like all of you.</p>
 
-<p>I am a foodie and I love playing  strategy games like<a href="http://www.ageofempires3.com/">Age Of Empiresa</a> and RPG like<a href="http://assassinscreed.ubi.com/en-gb/home/">Assasin's Creed</a>.I am quite a little inclined towards my coffee and drink lots of coke.</p>
+<p>I am a foodie and a gadget freak ,hell ya I love playing games but I try to complete them in a day.So I get addicted to lots of caffine and coke. </p>
 
-<p>Intrested in doing projects, you can always contact me on  <a href="https://twitter.com/rrindam">twitter</a>and  <a href="https://plus.google.com/114591183859331432646">google+.</a> </p>
+<p>Well intrested in doing projects,you can always contact me on  <a href="https://twitter.com/rrindam">twitter</a>and  <a href="https://plus.google.com/114591183859331432646">google+.</a> </p>
