mobile view updated

--- a/about.html
+++ b/about.html
@@ -3,9 +3,13 @@ layout: default
 title: Arindam Pradhan
 ---
 <h1>Arindam Pradhan</h1>	
-<p> Hey Hi ,I am Arindam Pradhan 20,I live in a small town Bhubaneswar in Orissa.I am an electrical engineer graduate at <a href="http://cet.edu.in/">CET,Bhubaneswar</a>.</p>
-<p>I have a keen intrest on FOOS and Competitive Programming.I enjoy programming ,it's fun activity, keeps me focused and calm.Have a look at my <a href="https://github.com/arindampradhan">github</a> ,these are some of my works.Currenty I am self teaching,I follow mostly blogs,tutorials and github projects.I get motivated a lot and my dream is to be the best programmer,master a single language and write lots(tons) of code like all of you.</p>
+<p> Hi ,I am Arindam Pradhan 20,I live in a small town Bhubaneswar in Orissa.I am an electrical engineer graduate at <a href="http://cet.edu.in/">CET,Bhubaneswar</a>.</p>
+<p>I have a keen intrest on FOOS and Competitive Programming.I enjoy programming ,it's fun activity, keeps me focused and calm.Have a look at my <a href="https://github.com/arindampradhan">github</a> ,these are some of my works.Currenty I am self teaching,I follow mostly blogs,tutorials and github projects.I get motivated a lot and my dream is to be the best programmer,master a single language and write lots(tons) of code like all of you.<br/>
 
-<p>I am a foodie and a gadget freak ,hell ya I love playing games but I try to complete them in a day.So I get addicted to lots of caffine and coke. </p>
+I am a foodie and a gadget freak ,hell ya I love playing games and try to complete them in a day.So I get addicted to lots of caffine and coke. </p>
+<blockquote style="background-color:white;font-family: 'Avenir Next LT W01 Bold';border-left: 5px solid #eee;">
+  <h2>Contact me</h2>
+</blockquote>
+  <p>If you want to get in touch, send <a href="arindampradhan10@gmail.com">an email </a>.</p>
+<p>Arindam is  on <a href="https://twitter.com/rrindam">twitter</a>and  <a href="https://plus.google.com/114591183859331432646">google+ </a> and posts intresting stuffs.So,intrested in doing projects You can always contact me!!</p>
 
-<p>Well intrested in doing projects,you can always contact me on  <a href="https://twitter.com/rrindam">twitter</a>and  <a href="https://plus.google.com/114591183859331432646">google+.</a> </p>
